--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,10 +7,12 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= page_title %></title>
 
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <meta name="description" content="" />
+
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" %>
+    <%= stylesheet_link_tag "main" %>
   </head>
 
   <body class="<%= page_classes %>">
