[WIP] Better looking pages.

--- a/source/_entry.erb
+++ b/source/_entry.erb
@@ -1,6 +1,13 @@
-<div class="row">
-  <div class="col-md-12">
-    <%= entry.name %>
+<article>
+  <div class="row">
+    <div class="col-md-12">
+      <h2><%= entry.name %></h2>
+    </div>
   </div>
-</div>
+  <div class="row">
+    <div class="col-md-12">
+      <p><%= entry.description %></p>
+    </div>
+  </div>
+</article>
 
