--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -13,8 +13,8 @@
 .site-title {
     font-size: 36px;
     font-weight: bold;
-    line-height: 64px;
-    letter-spacing: -1px;
+    # line-height: 64px;
+    # letter-spacing: -1px;
     margin-bottom: 0;
 
     &,
