--- a/source/category_template.html.erb
+++ b/source/category_template.html.erb
@@ -1,9 +1,11 @@
-<div class="row">
-  <div class="col-md-12">
-    <h1><%= cat.title %></h1>
+<section>
+  <div class="row">
+    <div class="col-md-12">
+      <h1><%= cat.title %></h1>
+    </div>
   </div>
-</div>
 
-<% cat.entries.each do |e| %>    
-  <%= partial "entry", locals: { entry: e } %>
-<% end %>
+  <% cat.entries.each do |e| %>    
+    <%= partial "entry", locals: { entry: e } %>
+  <% end %>
+</section>
