--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,10 +12,56 @@
     <meta name="description" content="" />
 
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" %>
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag "main" %>
   </head>
 
   <body class="<%= page_classes %>">
-    <%= yield %>
+    <header class="site-header">
+      <nav class="navbar navbar-default">
+        <div class="container wrapper">
+          <div class="navbar-header">
+            <%= link_to "Rust Libraries", "/", title: "Rust Libraries", class: "site-title navbar-brand" %>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "ALL CATEGORIES", "/", title: "All Rust Libraries" %></li>
+              <li><%= link_to "SUBMIT A CHANGE", "/about/#propose", title: "Submit a request to add/edit a project/category" %></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="page-content">
+      <div class="container wrapper">
+        <%= yield %>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container wrapper">
+        <div class="row">
+          <div class="col-sm-4 col-xs-12">
+            <ul class="list-unstyled">
+              <li><%= link_to "all categories", "/", title: "All Rust libraries" %></li>
+              <li><%= link_to "about", "/about/", title: "About Rust Libraries" %></li>
+              <li><%= link_to "submit a change", "/about/#propose", title: "Submit a request to add/edit a project/category" %></li>
+              <li><%= link_to "source code", "https://github.com/webstream-io/rust-lang" %></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <ul class="list-unstyled">
+            </ul>
+          </div>
+          <div class="col-sm-4 col-xs-12 text-right custom-xs-text-left">
+            <ul class="list-unstyled">
+              <!-- <li><%= link_to "privacy policy", "/pages/privacy-policy.html" %></li> -->
+              <li><%= link_to "cc-zero-1.0", "https://creativecommons.org/publicdomain/zero/1.0/", rel: "license" %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
