--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -43,6 +43,5 @@ $on-laptop:        800px;
 @import
         "bootstrap-overrides",
         "base",
-        "layout",
-        "homepage"
+        "layout"
 ;
