--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -3,8 +3,6 @@
  */
 .site-header {
     border-top: 5px solid $grey-colour-dark;
-    border-bottom: 1px solid $grey-colour-light;
-    min-height: 56px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -33,103 +31,6 @@ body > footer {
     margin-top: $spacing-unit;
 }
 
-
-/**
- * Post list
- */
-
-.past-issues {
-    margin-top: 20px;
-
-    li.nav-header h2 {
-        border-bottom: 1px solid $grey-colour-light;
-    }
-
-    li {
-        line-height: 1.8;
-    }
-}
-
-.time-prefix {
-    font-family: "Fira Mono", monospace;
-}
-
-.post-title {
-    font-size: 20px;
-}
-
-
-/**
- * Page content
- */
-.page-content {
-    padding-top: $spacing-unit;
-}
-
-.page-heading {
-    font-size: 20px;
-}
-
-.post-list {
-    margin-left: 0;
-    list-style: none;
-
-    > li {
-        margin-bottom: $spacing-unit;
-    }
-}
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-colour;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-
-.post {
-    margin-bottom: 32px;
-    border-bottom: 1px solid $grey-colour-light;
-    padding: 24px;
-    border-radius: 8px;
-}
-
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h1, h2, h3, h4 {
-        font-weight: bold;
-    }
-
-    h1 {
-        font-size: 24px;
-    }
-
-    h2 {
-        font-size: 19px;
-    }
-
-    h3 {
-        font-size: 16px;
-    }
-
-    h4 {
-        font-size: 16px;
-    }
-}
-
 blockquote {
   white-space: pre-line;
 }
@@ -139,4 +40,26 @@ blockquote {
     height: 20px;
     vertical-align: middle;
     border: 0px none;
+}
+
+.entry {
+  margin-bottom: 32px;
+  border: 1px solid $grey-colour-light;
+  padding: 20px;
+}
+
+.wrapper {
+  max-width: 970px;
+}
+
+.homepage-list {
+  h3 {
+    margin-bottom: 0px;
+    a {
+      # color: $grey-colour-dark;
+    }
+  }
+  p {
+    margin-bottom: 20px;
+  }
 }
