--- a/source/_entry.erb
+++ b/source/_entry.erb
@@ -6,15 +6,15 @@
   </div>
   <p><%= entry.description %></p>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <%= fa_icon "cube" %>
       <%= link_to "crates.io", entry.crate_url %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <%= fa_icon "home" %>
       <%= link_to "Homepage", entry.homepage_url %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <% if entry.has_github? %>
         <%= fa_icon "github" %>
       <% end %>
@@ -25,17 +25,17 @@
   <p></p>
 
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>Licence</small>
       <br />
       <%= entry.licence %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>Latest Version</small>
       <br />
       <%= entry.version %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>Last Update</small>
       <br />
       <%= formatted_time entry.github_last_commit_at %>
@@ -45,7 +45,7 @@
   <p></p>
 
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>
         <%= fa_icon "download" %>
         Crate Downloads
@@ -53,7 +53,7 @@
       <br />
       <%= entry.crates_io_downloads %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>
         <%= fa_icon "star" %>
         GitHub Stars
@@ -61,7 +61,7 @@
       <br />
       <%= entry.github_stars %>
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <small>
         <%= fa_icon "code-fork" %>
         GitHub Forks
