added social meta tags.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,10 @@
 ---
 skip_title: true
+page_description: Welcome to Rust Libraries, a catalogue of Rust community's awesomeness!
 ---
 
 <% content_for :page_introduction do %>
-  <p>Welcome to Rust Libraries, a catalogue of Rust community's awesomeness!</p>
+  <p><%= current_page.data.page_description %></p>
 <% end %>
 
 <section class="homepage-list">
