Added a few more projects from https://github.com/kud1ing/awesome-rust

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
 
     <%= meta_tags %>
     <link rel="canonical" href="<%= canonical_url %>" />
+    <link rel="copyright" href="https://creativecommons.org/publicdomain/zero/1.0/" />
 
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" %>
